[project]
name = "wtf-term"
version = "0.3.2"
description = "Explain & fix your errors directly from the terminal."
authors = [
    { name = "VxidDev" }
]
readme = "README.md"
requires-python = ">=3.1.0"

dependencies = [
    "requests",
    "rich",
    "typer",
    "openai",
    "dotenv"
]

[project.scripts]
wtf = "wtf.main:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"