[project]
name = "wtf-term"
version = "0.6.3"
description = "Explain & fix your errors directly from the terminal."
authors = [
    { name = "VxidDev" }
]
readme = "README.md"
requires-python = ">=3.1.0"

dependencies = [
    "requests",
    "rich",
    "typer",
    "openai",
    "dotenv",
    "pytest"
]

[project.scripts]
wtf = "wtf.main:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"